--- a/src/app/modules/main/main.component.scss
+++ b/src/app/modules/main/main.component.scss
@@ -1,5 +1,10 @@
 @import "variables.scss";
 
+@mixin flexCenter{
+  display: flex;
+  align-items: center;
+}
+
 :host{
   display: block;
   width: 100%;
@@ -8,5 +13,62 @@
 }
 
 .main-header{
-
+  @include flexCenter;
+  padding: 0 12px 0 16px;
+  height: 100%;
+  max-width: 100%;
+  position: relative;
 }
+
+.nav-bar{
+  @include flexCenter;
+  font-weight: 200;
+  font-size: 14px;
+  color: #FFF;
+  margin-left: 24px;
+  height: 100%;
+  cursor: pointer;
+  overflow: auto;
+  flex-shrink: 1;
+  &_item{
+    @include flexCenter;
+    column-gap: 8px;
+    padding: 0 16px 0 12px;
+    height: 100%;
+    transition-duration: $anim-dur;
+    &:hover{
+      background-color: rgba(255,255,255,.2);
+    }
+  }
+}
+
+.search-block{
+  @include flexCenter;
+  column-gap: 32px;
+  margin-left: 40px;
+  position: relative;
+  .svg-icon{
+    cursor: pointer;
+  }
+  .expanded{
+    position: absolute;
+    right: 34px;
+    width: 10px;
+    height: 10px;
+    background: red;
+    input{
+      display: none;
+    }
+  }
+}
+
+.side-block{
+  @include flexCenter;
+  column-gap: 8px;
+  position: absolute;
+  right: 16px;
+  top: 0px;
+  height: 100%;
+}
+
+
