--- a/src/assets/scss/material/button.scss
+++ b/src/assets/scss/material/button.scss
@@ -1,5 +1,9 @@
+@import "variables.scss";
+
 .mdc-button--raised.search{
   height: 100%;
   border-radius: 2px;
   font-size: 12px;
+  background: $main-color-2 !important;
+  color: #FFF !important;
 }
