--- a/src/app/modules/main/main.component.scss
+++ b/src/app/modules/main/main.component.scss
@@ -23,7 +23,6 @@
 .nav-bar{
   @include flexCenter;
   font-weight: 200;
-  font-size: 14px;
   color: #FFF;
   margin-left: 24px;
   height: 100%;
@@ -57,18 +56,20 @@
     width: 0px;
     height: 48px;
     background: #FFF;
-    overflow: hidden;
+    overflow: visible;
     border-radius: 4px;
     .input{
       flex-grow: 1;
     }
-    &.expanded{
-      transition-duration: $anim-dur;
-      opacity: 1;
+    &.expanding{
+      *{
+        opacity: 0;
+      }
     }
     &.closed{
-      transition-duration: $anim-dur;
-      opacity: 0;
+      .search{
+        display: none;
+      }
     }
   }
 }
@@ -82,6 +83,10 @@
   height: 100%;
 }
 
+.dropdown{
+  position: absolute;
+  top: 50px;
+}
 
 
 
