--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -2,6 +2,8 @@ $main-color: #1074CC;
 $main-color-2: #C31643;
 $text-color: #2A3033;
 
+$disable-color: #E1E4E6;
+$disable-text-color: #7F878C;
 $scroll-bar-size: 6px;
 
 $anim-dur: .3s;
