--- a/src/app/modules/filter/desktop-filter/desktop-filter.component.scss
+++ b/src/app/modules/filter/desktop-filter/desktop-filter.component.scss
@@ -38,9 +38,10 @@ $section-height: calc($height / 3);
   .select, .search-string{
     height: $section-height;
   }
-  .select{
-    column-gap: 8px;
-  }
+}
+
+.select{
+  overflow: auto;
 }
 
 .single{
@@ -48,12 +49,17 @@ $section-height: calc($height / 3);
     margin-right: 8px;
   }
   p{
+    position: sticky;
+    top: 0px;
     color: #000;
+    background-color: #FFF;
+    z-index: 1;
   }
 }
 
 .multi{
   @include flexCenter;
+  flex-wrap: wrap;
 }
 
 .search-string{
@@ -92,7 +98,24 @@ $section-height: calc($height / 3);
       li{
         margin-top: 12px;
         line-height: 20px;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     }
+  }
+}
+
+@media (min-width: 1024px) {
+  .multi{
+    overflow: hidden;
+  }
+}
+
+@media (max-width: 1024px) {
+  .multi, .single > .checkboxes{
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    flex-wrap: nowrap;
   }
 }
