--- a/src/app/modules/main/main.component.html
+++ b/src/app/modules/main/main.component.html
@@ -4,6 +4,7 @@
   </div>
   <ng-container [ngTemplateOutlet]="navBarTemp"></ng-container>
   <ng-container [ngTemplateOutlet]="searchBlock"></ng-container>
+  <div class="invisible"></div>
   <ng-container [ngTemplateOutlet]="sideBlock"></ng-container>
 </div>
 
